# genai-misc

./: .gitignore  README.md  pyproject.toml
agents/notebooks/: levels_of_agency.ipynb
agents/smolagents/: smolagents.ipynb  smolagents_agent.py
agents/strands/: strands.ipynb  strands_agent.py
doc-generation/: state-guidebook.ipynb
doc-generation/state_blurbs/: Alabama.md  Alaska.md  Arizona.md  Arkansas.md  California.md  Colorado.md  Connecticut.md  Delaware.md  Florida.md  Georgia.md  Hawaii.md  Idaho.md  Illinois.md  Indiana.md  Iowa.md  Kansas.md  Kentucky.md  Louisiana.md  Maine.md
doc-generation/state_trivia/: Alabama.json  Alaska.json  Arizona.json  Arkansas.json  California.json  Colorado.json  Connecticut.json  Delaware.json  Florida.json  Georgia.json  Hawaii.json  Idaho.json  Illinois.json  Indiana.json  Iowa.json  Kansas.json  Kentucky.json  Louisiana.json  Maine.json  Maryland.json  Massachusetts.json  Michigan.json  Minnesota.json  Mississippi.json  Missouri.json  (+1 more)
dspy/: dspy.ipynb  dspy_concepts.ipynb  dspy_rag.ipynb  dspy_test.ipynb  generate_dspy_examples.ipynb  synthetic_knowledge_items_with_qas.csv
gradio-doc-chat/: gradio-doc-chat.py
litellm-mlx/: Dockerfile  litellm-mlx.ipynb
mcp-arxiv/: .dockerignore  Dockerfile  README.md  docker-compose.yml  requirements.txt  test-http-api.sh
summarization-analysis/: intermediate_results.json  scored_results.json  simulated_data.csv  summarization_analysis.ipynb  unscored_results.json
titan-multimodal-embeddings/: titan_multimodal_embeddings.ipynb
tokenization/: basic_tokenization.ipynb
(+71 files in other folders)
